--- a/src/app/people/people-form/people-form.component.html
+++ b/src/app/people/people-form/people-form.component.html
@@ -7,13 +7,13 @@
         <form [formGroup]="formGroup">
           <div class="form-group mb-2">
             <label for="name">Name</label>
-            <input type="text" placeholder="Person name" formControlName="name" class="form-control" id="name">
+            <input type="text" placeholder="Person name" formControlName="name" class="form-control" id="name" [ngClass]="{'border-danger': isNameInvalidAndTouched}">
           </div>
           <div class="form-group mb-2">
             <label for="year">Year</label>
             <input type="number" formControlName="year" class="form-control" [min]="minYear" id="year" placeholder="Year">
           </div>
-         <ng-content select=".btn"></ng-content>
+          <ng-content select=".btn"></ng-content>
         </form>
       </div>
     </div>
